[gd_scene load_steps=4 format=2]

[ext_resource path="res://ConfirmBox.gd" type="Script" id=1]
[ext_resource path="res://WakuWakuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sell_screen.wav" type="AudioStream" id=3]

[node name="ConfirmBox" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="QuestionText" type="RichTextLabel" parent="."]
margin_left = 312.401
margin_top = 149.111
margin_right = 763.401
margin_bottom = 261.111
custom_fonts/normal_font = ExtResource( 2 )
text = "Are you sure?"
scroll_active = false

[node name="SupportText" type="RichTextLabel" parent="."]
margin_left = 312.401
margin_top = 285.111
margin_right = 763.401
margin_bottom = 361.111
custom_fonts/normal_font = ExtResource( 2 )
text = "This cannot be undone."
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.602
